styles/css/main.css
::-moz-selection { background: #9966ff; color: white; }
::selection { background: #9966ff; color: white; }

* {
  box-sizing: border-box;
}

html {
  height: 2000px;
}

body {
  background:black;
  color:white;
  margin:0;
  font-size: 18px;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-x: hidden;
  height: 2000px;
}

main {
  min-height: 2000px;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.twitter-tweet {
  margin:0 auto;
}

#top-bar {
  box-shadow: 0 1px 55px #9933ff;
  font-size: 12px;
  font-weight:bold;
  letter-spacing: .2px;
  margin-bottom: 100px;
  padding: 10px 0;
  text-align: center;
  text-transform: uppercase;
}

#top-bar i.em {
  margin: -3px 0 0 10px;
}

#intro {
  font-size:50px;
  font-weight:bold;
  text-align:center;
  letter-spacing:-.03em;;
  margin-top:50px;
}

#intro a {
  color:#9966ff;
  text-decoration:none;
  border-bottom:3px dotted;
}

#intro a:hover {
  opacity:.8;
}

#intro a:active {
  opacity:.6;
}

@media only screen and (max-width: 500px) {
    #intro {
      font-size:25px;
    }

    #location-emojis {
      display:none;

    }
}

.snip {
  position: absolute;
  display: inline-block;
  top: 50%;
  left: 50%;
}

.snip.perm {
  text-shadow: 2px 2px 5px #000;
  z-index: 10001;
  visibility: hidden;
  font-weight: bold;
}

.snip.location {
  position:absolute;
  top:25%;
  right:15%;
}

.large-emoji {
  font-size:160px;
}

.medium-emoji {
  font-size:80px;
}

.clients ul li:first-child {
  text-transform: uppercase;
  color: white;
}

.showcase {
  font-size: 0;
  margin: 0;
  display: inline-block;
  border: 1px solid #616161;
  max-width: 40%;
  position: relative;
  text-transform: uppercase;
  visibility: hidden;
  position: absolute;
}

.showcase img {
  max-width: 100%;
  height: auto;
  user-select: none;
}

.showcase img:hover {
  cursor: move;
}

.showcase figcaption {
  font-size: 18px;
  color: black;
  background-color: white;
  text-align: center;
  padding: 10px;
  position: relative;
}

.showcase figcaption span {
  float: left;
}

.showcase a {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

#location-emojis {
  position: absolute;
  left:10%;
  top:30%;
}

#flag-on-earf {
  position: absolute;
  top: -59px;
  left: 90px;
}

footer {
  padding-top: 50px;
  text-align: center;
  font-size: 50px;
  padding-bottom: 50px;
}

.flag-on-earf {
  position: absolute;
}

.flag-on-earf .flag {
  width: 100%;
  text-align: center;
  font-size: 63px;
  position: absolute;
  top: -32px;
  left: 8px;
}

.flag-on-earf .earf {
  font-size: 126px;
}

@media (max-width: 800px) {

  #top-bar {
    margin-bottom: 20px;
  }

  .showcase {
    position: static !important;
    display: block;
    max-width: none;
    width: calc(100% - 40px) !important;
    margin-top: 20px !important;
    margin-right: auto !important;
    margin-left: auto !important;
    visibility: visible !important;
  }

  .showcase img {
    width: 100%;
  }
}

